feat: Update design